05_kubernetes/03_Session3_Application_Deployment/018-updating-without-downtime/manifests/03-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: lab018
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 3000
      targetPort: http
