05_kubernetes/03_Session3_Application_Deployment/018-updating-without-downtime/manifests/05-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: lab018
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8000
      targetPort: http
